--- a/aula10/ex07.html
+++ b/aula10/ex07.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+        body {
+            font: normal 1.2em Arial;
+        }
+
+        div#res {
+            margin-top: 20px;
+        }
+    </style>
+
     <title>Somando números</title>
 </head>
 <body>
@@ -11,11 +22,18 @@
 
     <input type="number" name="txtn1" id="txtn1"> +
     <input type="number" name="txtn2" id="txtn2">
-    <input type="button" value="somar" onclick="somar">
+    <input type="button" value="somar" onclick="somar()">
+    <div id="res">Resultado</div>
 
     <script>
         function somar() {
-            
+            var tn1 = document.getElementById('txtn1')
+            var tn2 = window.document.querySelector('input#txtn2')
+            var res = document.getElementById('res')
+            var n1 = Number(tn1.value)
+            var n2 = Number(tn2.value)
+            var soma = n1 + n2
+            res.innerText = `A soma entre ${n1} e ${n2} é ${soma}`
         }
     </script>
 </body>
