--- a/aula14ex/ex17/modelo.html
+++ b/aula14ex/ex17/modelo.html
@@ -6,20 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <script src="script/script.js"></script>
-    <title>Modelo de exercício</title>
+    <title>Tabuada</title>
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>
 
     <section>
         <div>
-            test
+            <p>
+                Número: <input type="number" name="txtnumero" id="txtnumero"> <input type="button" value="Gerar tabuada" onclick="tabuada()">
+            </p>
         </div>
 
         <div>
-            
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima</option>
+            </select>
         </div>
     </section>
 
