--- a/aula16ex/ex16/modelo.html
+++ b/aula16ex/ex16/modelo.html
@@ -6,19 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <script src="script/script.js"></script>
-    <title>Modelo de exercício</title>
+    <title>Analizador de números</title>
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Analizador de números</h1>
     </header>
 
     <section>
         <div>
-            test
+            Número (entre 1 e 100):
+            <input type="number" name="fnum" id="fnum">
+            <input type="button" value="Adicionar" onclick="adicionar()">
+            <br><select name="flista" id="flista" size="6"></select>
+            <br><input type="button" value="finalizar" onclick="finalizar()">
         </div>
 
-        <div>
+        <div id="res">
             
         </div>
     </section>
